# synth-afm

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  publish.sh  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  test.yml
api/: index.html
api/io/: index.html
api/kernels/: index.html
api/simulator/: index.html
docs/: getting_started.md  index.md  theory.md
docs/api/: index.md  io.md  kernels.md  simulator.md
examples/: quickstart_afm.ipynb  simulate_ubiquitin_afm.py  tip_geometry.ipynb  tip_geometry.nbconvert.ipynb
getting_started/: index.html
search/: search_index.json
synth_afm/: __init__.py  constants.py  io.py  kernels.py  simulator.py
tests/: test_basic.py  test_biophysics.py  test_validation.py
theory/: index.html
