[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synth-afm"
version = "0.1.0"
description = "Synthetic High-Speed AFM image generation with differentiable kernels"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "George Elkins"}
]
keywords = [
    "afm",
    "biophysics",
    "simulation",
    "jax",
    "structural-biology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "jax",
    "jaxlib",
    "numpy>=2.0.0",
    "biotite>=0.35.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/elkins/synth-afm"
Repository = "https://github.com/elkins/synth-afm"

[tool.setuptools.packages.find]
include = ["synth_afm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true
